<resources>
    <string name="app_name">All In One Aarti</string>
    <string name="arti">Aarti</string>
    <string name="favorate">Favorite Aarti</string>
    <string name="addfavorate">Add To Favorite Aarti</string>
    <string name="removefavorate">Remove Favorite Aarti</string>
    <string name="language">language हिंदी</string>
    <string name="Moreapps">More apps</string>
    <string name="nodata">No Favorite Aarti</string>
    <string name="rateus">Rate us if you like this app?</string>
    <string name="exit">Do you want to Exit?</string>
    <string name="rate">Rate/Feedback</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="playing">Now Playing:</string>
    <string name="share">Share</string>
    <string name="Feedback">Feedback</string>
    <string name="appsfromuse">More Apps From Us</string>
    <string name="ok">Ok</string>
    <string name="ganpati">Ganpati Aarti</string>
    <string name="ramchandra">Ramchandra Aarti</string>
    <string name="vishnu">Vishnu Aarti</string>
    <string name="hanuman">Hanuman Aarti</string>
    <string name="shivji">Shivji Aarti</string>
    <string name="laxmi">Laxmi Aarti</string>
    <string name="ambama">Ambama Aarti</string>
    <string name="krishna">Krishna Aarti</string>
    <string name="saibaba">Saibaba Aarti</string>
    <string name="swaminarayan">Swaminarayan Aarti</string>
    <string name="gayatri">Gayatri Aarti</string>
    <string name="kalima">Kalima Aarti</string>
    <string name="saraswati">Saraswati Aarti</string>
    <string name="santoshi">Santoshi Aarti</string>
    <string name="ganpatimarathi">Ganpati Marathi Aarti</string>
    <string-array name="godNames">
        <item>@string/ganpati</item>
        <item>@string/ramchandra</item>
        <item>@string/vishnu </item>
        <item>@string/hanuman </item>
        <item>@string/shivji </item>
        <item>@string/laxmi </item>
        <item>@string/ambama </item>
        <item>@string/krishna </item>
        <item>@string/saibaba </item>
        <item>@string/swaminarayan </item>
        <item>@string/gayatri </item>
        <item>@string/kalima </item>
        <item>@string/saraswati </item>
        <item>@string/santoshi </item>
        <item>@string/ganpatimarathi </item>
    </string-array>
    <string name="ganpatilyrics">Jai Ganesh, Jai Ganesh, Jai Ganesh Deva\n
Mata Jaaki Parvati Pita Mahadeva\n
Jai Ganesh, Jai Ganesh, Jai Ganesh Deva\n
Mata Jaaki Parvati Pita Mahadeva\n
\n
Ek Dant Dayavant, Chaar Bhuja Dhaari\n
Maathe Pe Sindhoor Sohe, Muse Ki Savari\n
Paan Chadhe, Phul Chadhe, Aur Chadhe Meva\n
Ladduan Ka Bhog Lage, Sant Kare Seva\n
\n
Jai Ganesh, Jai Ganesh, Jai Ganesh Deva\n
Mata Jaaki Parvati Pita Mahadeva\n
\n
Andhan Ko Aankh Det, Kodhin Ko Kaaya\n
Baanjhan Ko Putra Det, Nirdhan Ko Maaya\n
Surya Shaam Sharan Aye, Safalki Je Seva\n
Mata Jaaki Parvati Pita Mahadeva\n
\n
Jai Ganesh, Jai Ganesh, Jai Ganesh Deva\n
Mata Jaaki Parvati, Pita Mahadeva\n</string>
    <string name="ramchandralyrics">Shri Ramachandra Kripalu Bhajuman, Harana bhavabhaya daarunam ।\n
Navakanja lochana kanja mukhakara, Kanja pada kanjaarunam ॥1॥\n
\n
Kandarpa aganita amita chhav nava, Neela neerara sundaram ।\n
Patapita maanahum tadita ruchi-shuchi ,Navmi janaka sutaavaram ॥2॥\n
\n
Bhaju deena bandhu dinesh daanav, Daityavansha nikandanam ।\n
Raghunanda aananda kanda kaushala, Chanda dasharatha nandanam ॥3॥\n
\n
Sira mukuta kundala tilaka chaaru, Udaaru anga vibhooshanam ।\n
Aajaanu bhuja shara chaapadhara, Sangraama-jita-khara dooshanam ॥4॥\n
\n
Iti vadati Tulsidas shankar, Shesha muni manaranjanam ।\n
Mama hridayakanja nivaas kuru, Kaamaadi khaladal ganjanam ॥5॥\n
\n
Manu jaahin raacheu milihi so baru , Sahaja sundara saanvaro ।\n
Karuna nidhaan sujaan seelu, Sanehu jaanat raavaro ॥6॥\n
\n
Ehi bhaanti gauri asees suni siya, Sahita hiyan harashi ali ।\n
Tulsi bhavaanihi pooji puni puni, Mudit man mandir chalee ॥7॥\n
\n
Shri Ramachandra Kripalu Bhajuman, Harana bhavabhaya daarunam ।\n
Navakanja lochana kanja mukhakara, Kanja pada kanjaarunam ॥8॥\n</string>
    <string name="visnuaartilyrics">Om Jai Jagadish Hare, Swami Jai Jagadish Hare\n
\n
Bhakt Jano Ke Sankat, Daas Jano Ke Avgun,\n
\n
Kshan Mein Door Kare, Om Jai Jagadish Hare |\n
\n
Jo Dhyaave Phal Paave, Dukh Bin Se Man Kaa,\n
\n
Swami Dukh Bin Se Man Kaa,\n
\n
Sukh Sampati Ghar Ave, Bansari wala Ghar Ave,\n
\n
Kasht Mite Tan Kaa, Om Jai Jagadish Hare |\n
\n
Maat Pita Tum Mere, Sharan Gahoon Main Kiski,\n
\n
Swami Sharan Gahoon Main Kiski,\n
\n
Tum Bin Aur Na Dooja, Prabhu Bin Aur Na Dooja,\n
\n
Aas Karoon Mein Jiski, Om Jai Jagadish Hare |\n
\n
Tum Pooran Paramatam, Tum Antaryami,\n
\n
Swami Tum Antaryami,\n
\n
Paar Brahm Parameshwar, Paar Brahm Parameshwar,\n
\n
Tum Sabke Swami, Om Jai Jagadish Hare |\n
\n
Tum Karuna Ke Saagar, Tum Paalan Karta,\n
\n
Swami Tum Raksha Karta,\n
\n
Main Moorakh Khal kaami, Main Sevak Tum Swami,\n
\n
Kripa Karo Bharta, Om Jai Jagadish Hare |\n
\n
Tum Ho Ek Agochar, Sabke Praan Pati,\n
\n
Swami Sabke Praan Pati, Kis Vidhi Miloon Dayamay,\n
\n
Kis Vidhi Miloon Dayamay,\n
\n
Tum Ko Main Kumti, Om Jai Jagadish Hare |\n
\n
Deen Bandhu Dukh Harta, Thaakur Tum Mere,\n
\n
Swaami Rakhshak Tum Mere,\n
\n
Apne Haath Uthao, Apni Sharan Lagao,\n
\n
Dwaar Padha Main Tere, Om Jai Jagadish Hare |\n
\n
Vishay Vikaar Mitaao, Paap Haro Deva,\n
\n
Swami Kasht Haro Deva,\n
\n
Shraddha Bhakti Badhao, Shraddha Prem Badhao,\n
\n
Santan Ki Seva, Om Jai Jagadish Hare |\n
\n
Om Jai Jagadish Hare, Swami Jai Jagadish Hare,\n
\n
Bhakt Jano Ke Sankat, Daas Jano Ke Avgun,\n
\n
Kshan Mein Door Kare, Om Jai Jagadish Hare |\n</string>
    <string name="hanumanaartilyrics">Doha\n
\n
Laal Deh Laali lase, Aru Dhari Laal Langoor.\n
Vajr Deh Danav Dalan, Jai Jai Jai kapi Sur..\n
Pavan suth Hanuman Ki Jai..\n
\n
Choupai\n
\n
Aarti Ke Jai Hanuman Lalaki.\n
Dusht dalan Raghunath kalaki. Aarti Ke Jai…\n
\n
Jaakay bal say giriwar kaapay,\n
Roog doosh jakay nikat na jhankay.\n
\n
Anjani putra maha balli daayee,\n
Santan kay prabhu sada sahaye. Aarti Ke Jai…\n
\n
Day beeraa Raghunath pataway,\n
Lanka jaaree seeya soodi laayee\n
\n
Lanka so koti Samundra Seekhaayee,\n
Jaat pawansut baran layee\n
\n
Lanka Jaari Asur Sanghaaray,\n
Seeya Ramjee kay kaaj sawaray. Aarti Ke Jai…\n
\n
Lakshman moor chet paray Sakaaray,\n
Aani Sajeewan praan ubaaray\n
\n
Paitee pataal toori jam kaaray,\n
Ahi Ravana kee bujaa ukhaaray\n
\n
Baayay bujaa asur dhal maaray,\n
Dahinay bujaa sant jan taray. Aarti Ke Jai…\n
\n
Sur nar Muni arati utaray,\n
Jai jai jai Hanuman ucharaay\n
\n
Kanchan thaar Kapoor loo chaayee,\n
Aaaarati karat Anjani maayee\n
\n
Jo Hanuman kee Aaarati gaaway,\n
\n
Basee Baikoontha param pad paaway. Aarti Ke Jai…\n</string>
    <string name="shivaartilyrics">jai Shiv Omkaara, Prabhu Jai Shiva Omkara,\n
Bramha, Vishnu, Sadashiv, Ardhangi Dhaara.\n
Om Jai Shiv Omkara\n
\n
Ekanan Chaturanan Panchanan Raje,\n
Hansanan Garudaaan Vrishvaahan Saaje.\n
Om Jai Shiv Omkara\n
\n
Do Bhuj Chaar Chaturbhuj Dasamukh Ati Sohe,\n
Trigun Rup Nirakhate Tribhuvan Jan Mohe.\n
Om Jai Shiv Omkara\n
\n
Akshamala Vanamala Mundamala Dhari,\n
Tripurari Kansari Kar Mala Dhari.\n
Om Jai Shiv Omkara\n
\n
Shvetambar Pitambar Baghambar Ange,\n
Sanakadik Garunadik Bhutadik Sange.\n
Om Jai Shiv Omkara\n
\n
Kar Ke Madhy Kamandal Charka Trishuladhari,\n
Sukhakari Dukhahari Jagapalan Kari.\n
Om Jai Shiv Omkara\n
\n
Bramha Vishnu Sadashiv Jaanat Aviveka,\n
Pranavakshar Mein Shobhit Ye Tino Eka.\n
Om Jai Shiv Omkara\n
\n
Lakshmi Va Savitri Parvati Sangaa,\n
Parvati Ardhangi, Shivalahari Ganga.\n
Om Jai Shiv Omkara\n
\n
Parvat Sohe Parvati, Shankar Kailasa,\n
Bhang Dhatur Ka Bhojan, Bhasmi Mein Vasa.\n
Om Jai Shiv Omkara\n
\n
Jata Me Gang Bahat Hai, Gal Mundan Maala,\n
Shesh Naag Lipatavat, Odhat Mrugachala.\n
Om Jai Shiv Omkara\n
\n
Kashi Me Viraje Vishvanath, Nandi Bramhchari,\n
Nit Uthh Darshan Pavat, Mahima Ati Bhari.\n
Om Jai Shiv Omkara\n
\n
Trigunasvamiji Ki Aarti Jo Koi Nar Gave,\n
Kahat Shivanand Swami Sukh Sampati Pave.\n
Om Jai Shiv Omkara</string>
    <string name="laxmiaartilyrics">Om Jai Lakshmi Mata,Maiya Jai Lakshmi Mata\n
Tumko Nishidin Sevat,Hari Vishnu Vidhata\n
Om Jai Lakshmi Mata\n
\n
Uma Rama Brahmani,Tum Hi Jag-Mata\n
Surya, Chandrama Dhyavat, Naarad Rishi Gata\n
Om Jai Lakshmi Mata\n
\n
Durga Roop Niranjani,Sukh Sampatti Data\n
Jo Koi Tumko Dhyavat,Riddhi-Siddhi Dhan Pata\n
Om Jai Lakshmi Mata\n
\n
Tum Patal-Nivasini, Tum Hi Shubhdata\n
Karma Prabhav Prakashini, Bhavanidhi Ki Trata\n
Om Jai Lakshmi Mata\n
\n
Jis Ghar Mein Tum Rahti, Sab Sadgun Aata\n
Sab Sambhav Ho Jata,Man Nahi Ghabrata\n
Om Jai Lakshmi Mata\n
\n
Tum Bin Yagya Na Hote, Vastra Na Koi Pata\n
Khan Pan Ka Vaibhav, Sab Tumase Aata\n
Om Jai Lakshmi Mata\n
\n
Shubh-Gun Mandir Sundar,Kshirodadhi Jata\n
Ratna Chaturdash Tum Bin, Koi Nahi Pata\n
Om Jai Lakshmi Mata\n
\n
Mahalakshmi Ji Ki Aarti,Jo Koi Jan Gata\n
Ur Anand Samata,Paap Utar Jata\n
Om Jai Lakshmi Mata</string>
    <string name="ambemaaartilyrics"> Jay Adhya shakti Maa jay Adhya shakti\n
Akhand brahmand dipavya, padve pragatya Maa\n
Om jayo jayo Maa jagdambe....\n
\n
Dritiya be swarup Shivshakti janu (2)\n
Brahma Ganapati gaau (2) har gaau har Maa.... Om jayo ....\n
\n
Tritiya tran swarup tribhuvan ma betha (2)\n
Trayathaki Tarveni (2) tu Tarveni Maa.... Om jayo....\n
\n
Chothe chatura Mahalaxmi Maa sachra char vya pyya (2)\n
Chaar bhuja choudisha (2) pragatya dakshin Maa... Om\n
jayo....\n
\n
Panchami panch rushi panchmi gun padma (2)\n
Panch sahastra tya sohiye (2) Panche tatvo Maa. Om jayo....\n
\n
Shashthi tu Narayani Mahisasur maryo (2)\n
Narnari na roope (2) vyapya saghde Maa.... Om jayo....\n
\n
Sapta mi sapta patal sandhya Savitri (2)\n
Gau Ganga Gayatri (2) Gauri Geeta Maa.... Om jayo....\n
\n
Ashthami ashth bhuja aayi ananda (2)\n
Sunivar munivar janamya (2) Dev daityo Maa.... Om jayo...\n
\n
Navmi nav kul naag seve Nav Durga (2)\n
Navratri na poojan Shivratri na archan kidha har Brahma. Om\n
jayo....\n
\n
Dashmi dash avtaar jay Vijyadashmi (2)\n
Rame Ram ramadya (2) Ravan rodyo Maa....Om jayo....\n
\n
Ekadashi agiyarash katyayanika Maa (2)\n
Kaam Durga Kalika (2) Shyaama ne Raama.... Om jayo....\n
\n
Baarse bara roop Bahuchari Ambe Maa (2)\n
Batuk bhairav sohiye kal bhairav sohiye taara chhe tuj\n
Maa.... Om jayo....\n
\n
Terse tulja roop tame Taruni Maata (2)\n
Brahma Vishnu sada Shiv (2) gun tara gata.... Om jayo....\n
\n
Chaudashe chuda roop Chandi Chamunda (2)\n
Bhhav bhakti kai aapo, chaturai kai aapo Sihwahani Maata....\n
Om jayo....\n
\n
Pooname kumbh bharyo sambhadjo karuna (2)\n
Vashishtha deve wakhanya, Markand deve wakhanya gaaye shubh\n
kavita....\n
Om jayo...\n
\n
Savant sole satavan solse baavis Maa (2)\n
Savant sole pragatya (2) reva ne tire Maa Ganga ne tire....\n
Om jayo...\n
\n
Ekme ek swarup, antar nav dharso (2)\n
Bhola Bhavani ne bhajata (2) Bhavsagar tarso. Om jayo jayo\n
Maa jagdambe....\n
\n
Trambavati nagari Maa Roopavati nagari (2)\n
Sol sahastra tya sohiye (2) Kshma karo Gauri Maa daya karo\n
Gauri.... Om\n
jayo....\n
\n
Maa ni Chund-di laal gulal, sobha bahu sari (2)\n
Aangad kunkad nache, jai bahucharwali... Om jayo....\n
\n
Shiv Shakti ni aarti je bhaave gashe (2)\n
Bhane Shivanand Swami (2) Sukh smapati thaashe har Kailashe\n
jase,\n
Maa amba dukh harse.... Om jayo....\n
\n
Jay Adhya shakti Maa jay Adhya shakti\n
Akhand brahmand ni paavya, padve pragatya Maa\n
Om jayo jayo Maa jagdambe....\n
\n
Kapuura Gauram Karunaa Vataaram\n
Sansaara Saaram Bhujagendra Haaram\n
Sadaa Vasantam Hridayaa Ravinde\n
Bhavam Bhavaanii Sahitam Namaami\n</string>
</resources>