<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rateus"
                android:background="@color/colorPrimaryDark"
                android:padding="13dp"
                android:textSize="18sp"
                android:textColor="@color/white"></TextView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"></TextView>








            <com.google.android.ads.nativetemplates.TemplateView
                android:layout_alignParentBottom= "true"
                android:visibility= "gone"
                android:id= "@+id/nativeTemplateView"
                app:gnt_template_type= "@layout/gnt_medium_template_view"
                android:layout_width= "match_parent"
                android:layout_height= "wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rateus_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1.4"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:background="@color/gray"
                    android:textColor="@color/white"
                    android:text="@string/rate"></TextView>

                <TextView
                    android:id="@+id/no_btn"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:background="@color/gray"
                    android:textColor="@color/white"
                    android:text="@string/no"></TextView>
                <TextView
                    android:id="@+id/yes_btn"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:background="@color/gray"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:text="@string/yes"></TextView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>