<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@mipmap/splash"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:weightSum="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/videlist"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:background="@drawable/favaarti"></ImageView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"></View>
                <ImageView
                    android:id="@+id/likeactivity"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:background="@drawable/aarticion"></ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:weightSum="1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/brown"
                android:text="@string/arti"></TextView>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"></View>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:textColor="@color/brown"

                android:layout_height="wrap_content"
                android:text="@string/favorate"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:weightSum="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:background="@drawable/langselect"></ImageView>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"></View>
            <ImageView
                android:id="@+id/moreaaps"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:background="@drawable/moreaaps"></ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:weightSum="1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lang_text"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/brown"

                android:text="@string/language"></TextView>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"></View>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:textColor="@color/brown"
                android:layout_height="wrap_content"
                android:text="@string/Moreapps"></TextView>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/banneradd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.08"
            android:orientation="vertical">
            <!--            <com.google.android.gms.ads.AdView-->
            <!--                android:id="@+id/adView"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->

            <!--                android:layout_gravity="bottom"-->

            <!--                android:background="@color/primary_dark"-->
            <!--                 >-->
            <!--            </com.google.android.gms.ads.AdView>-->
        </LinearLayout>

    </LinearLayout>
</LinearLayout>